マップ機能の開発。 マップ画面の初期表示を作成した。

--- a/WebDashboard/WebContent/resources/css/common.css
+++ b/WebDashboard/WebContent/resources/css/common.css
@@ -28,6 +28,11 @@ body {
 #tree_area {
 	background: none;
 }
+
+#list_area {
+	background: none;
+}
+
 #contents_area {
 	background-color: #000;
 }
