マップ登録機能をコミット

--- a/WebDashboard/WebContent/resources/css/common.css
+++ b/WebDashboard/WebContent/resources/css/common.css
@@ -29,8 +29,16 @@ body {
 	background: none;
 }
 
+#tree_area a {
+	color: #FFFFFF;
+}
+
 #list_area {
 	background: none;
+}
+
+#list_area a {
+	color: #FFFFFF;
 }
 
 #contents_area {
